Support Java 8 runtime